--- a/dss-doc/package.json
+++ b/dss-doc/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
